Add 영역구하기 나의 코드

--- a/_posts/2020-02-04-영역구하기.md
+++ b/_posts/2020-02-04-영역구하기.md
@@ -37,3 +37,63 @@
 ```
 
 ---
+
+### 나의 코드
+> 색이 칠해지지 않은 영역에서 BFS를 각각 돌리면서 넓이를 구한다.
+
+```
+from collections import deque
+
+dx = [1,-1,0,0]
+dy = [0,0,1,-1]
+
+y, x, N = map(int,input().split())
+
+graph = [[0 for _ in range(y)] for _ in range(x)]
+
+for _ in range(N):
+    l_x, l_y, r_x, r_y = map(int,input().split())
+
+    for i in range(l_x,r_x):
+        for j in range(l_y,r_y):
+            graph[i][j] = 1
+
+# for row in graph:
+#     print(*row)
+visit = [[0 for _ in range(y)] for _ in range(x)]
+
+ans = []
+
+for i in range(x):
+    for j in range(y):
+        if graph[i][j] == 1:
+            continue
+        if visit[i][j] == 1:
+            continue
+        # print(i,j)
+        que = deque()
+        que.append((i,j))
+        visit[i][j] = 1
+        cnt = 1
+        while que:
+            now_x, now_y = que.popleft()
+
+            for dir in range(4):
+                next_x = now_x+dx[dir]
+                next_y = now_y+dy[dir]
+
+                if next_x >= x or next_x < 0 or next_y >= y or next_y < 0:
+                    continue
+                if visit[next_x][next_y]:
+                    continue
+                if graph[next_x][next_y] == 1:
+                    continue
+                # print(next_x,next_y)
+                que.append((next_x,next_y))
+                visit[next_x][next_y] = 1
+                cnt += 1
+        ans.append(cnt)
+print(len(ans))
+ans.sort()
+print(*ans)
+```
