--- a/_posts/2020-02-05-주사위윷놀이.md
+++ b/_posts/2020-02-05-주사위윷놀이.md
@@ -327,7 +327,7 @@ def dfs(depth, path, result, loc, flag):
                     plus = 28
                     result += 28
                 else:
-                    plus = loc[i]
+                    plus = loc[i]g
                     result += loc[i]
             path.append(i)
             path.append(loc[i])
