Add 뱀 나의 코드

--- a/_posts/2020-02-05-뱀.md
+++ b/_posts/2020-02-05-뱀.md
@@ -114,6 +114,97 @@
 ```python
 def chdir(preMove, dir):
     if preMove == (1,0):
+        if dir == 'D':
+            return (0,1)
+        else:
+            return (0,-1)
+    elif preMove == (0,1):
+        if dir == 'D':
+            return (-1,0)
+        else:
+            return (1,0)
+    elif preMove == (0,-1):
+        if dir == 'D':
+            return (1,0)
+        else:
+            return (-1,0)
+    else:
+        if dir == 'D':
+            return (0,-1)
+        else:
+            return (0,1)
+
+lenOfmap = int(input())
+numOfapple = int(input())
+graph = [[0 for _ in range(lenOfmap)] for _ in range(lenOfmap)]
+
+for _ in range(numOfapple):
+    x,y = map(int,input().split())
+    graph[y-1][x-1] = 1
+
+numOfdir = int(input())
+
+dirs = []
+
+for _ in range(numOfdir):
+    tmp = input().split()
+    tmp[0] = int(tmp[0])
+    dirs.append(tmp)
+x = y = 0
+tail_x = 0
+tail_y = 0
+graph[x][y] = 2
+move = (1,0)
+tail_move = (1,0)
+tail_time = []
+time = 0
+sizes = 1
+while True:
+    # print(move)
+    # for row in graph:
+    #     print(*row)
+    # print()
+    x = x + move[0]
+    y = y + move[1]
+
+    time += 1
+    if x >= lenOfmap or x < 0 or y >= lenOfmap or y < 0:
+        break
+    if graph[x][y] == 2:
+        break
+
+    if graph[x][y] != 1:
+        graph[x][y] = 2
+        graph[tail_x][tail_y] = 0
+        tail_x = tail_x+tail_move[0]
+        tail_y = tail_y+tail_move[1]
+    else:
+        sizes += 1
+        graph[x][y] = 2
+    if len(dirs) != 0:
+        if time == dirs[0][0]:
+            tail_time.append((time+sizes,(move[0],move[1]),dirs[0][1]))
+            move = chdir(move,dirs[0][1])
+            dirs.pop(0)
+    # print(tail_time)
+    # print(time)
+    if len(tail_time) != 0:
+        if tail_time[0][0] == time:
+            tail_move = chdir(tail_time[0][1],tail_time[0][2])
+            tail_time.pop(0)
+
+print(time)
+```
+
+> 예제의 문제들은 통과되지만 런타임에러가 뜬다.
+>
+> 확인해보니 꼬리를 없애는 부분이 잘 실행되지 않는다.
+>
+> 뱀이 덮고있는 좌표들을 하나의 리스트에 넣어놓고 앞부분에 하나씩 빼오는 형식으로 짜봐야겠다.
+
+```Python
+def chdir(preMove, dir):
+    if preMove == (1,0):
         if dir == 'L':
             return (0,1)
         else:
@@ -140,7 +231,7 @@ graph = [[0 for _ in range(lenOfmap)] for _ in range(lenOfmap)]
 
 for _ in range(numOfapple):
     x,y = map(int,input().split())
-    graph[x][y] = 1
+    graph[x-1][y-1] = 1
 
 numOfdir = int(input())
 
@@ -150,16 +241,15 @@ for _ in range(numOfdir):
     tmp = input().split()
     tmp[0] = int(tmp[0])
     dirs.append(tmp)
+# print(dirs)
 x = y = 0
-tail_x = 0
-tail_y = 0
-graph[x][y] = 2
-move = (1,0)
-tail_move = (1,0)
-tail_time = []
+move = (0,1)
 time = 0
 sizes = 1
+snake = [(0,0)]
 while True:
+    # print(snake)
+    # print(time)
     # for row in graph:
     #     print(*row)
     # print()
@@ -169,29 +259,22 @@ while True:
     time += 1
     if x >= lenOfmap or x < 0 or y >= lenOfmap or y < 0:
         break
-    if graph[x][y] == 2:
+    if (x,y) in snake:
         break
 
-    if graph[x][y] != 1:
-        graph[x][y] = 2
-        graph[tail_x][tail_y] = 0
-        tail_x = tail_x+tail_move[0]
-        tail_y = tail_y+tail_move[1]
-    else:
-        sizes += 1
-        graph[x][y] = 2
-
-    if time == dirs[0][0]:
-        tail_time.append((sizes-1,(move[0],move[1]),dirs[0][1]))
-        move = chdir(move,dirs[0][1])
-        dirs.pop(0)
-
-    if len(tail_time) != 0:
-        if tail_time[0][0] == time:
-            tail_move = chdir(tail_time[0][1],tail_time[0][2])
-            tail_time.pop(0)
+    if graph[x][y] == 0:
+        snake.append((x,y))
+        snake.pop(0)
+    elif graph[x][y] == 1:
+        snake.append((x,y))
+        graph[x][y] = 0
+    if len(dirs) != 0:
+        if time == dirs[0][0]:
+            move = chdir(move,dirs[0][1])
+            dirs.pop(0)
 
 print(time)
 
 ```
 
+> 68ms 맞았습니다!
