--- a/_posts/2020-02-06-이차원배열과연산.md
+++ b/_posts/2020-02-06-이차원배열과연산.md
@@ -135,7 +135,87 @@
 
 ---
 
+### 나의 코드
+> mySort라는 함수를 만들어서 배열과 정렬 기준을 인자로 받아온다. 행 기준으로 정렬할 때는 행에 있는 각 숫자를 카운팅 하고 카운팅이 끝난 후에는 (숫자 등장횟수, 숫자)형식의 tuple로 리스트에 저장한다. 저장된 리스트를 정렬한 후에 tuple의 두번째 숫자, 첫번째 숫자 순으로 새로운 리스트에 저장한다.  
+마지막에 만든 리스트의 크기가 100이 넘어가면 100번째까지의 리스트만을 뽑아온다.  
+이제 열을 이용하여 정렬을 하는 것이 문제인데, 인자로 받아온 이차원 배열의 전치행렬을 이용한다. 전치행렬을 이용하여 앞서 행을 정렬할 때와 똑같이 정렬한 후에 만들어진 이차원 배열의 전치행렬을 리턴해주면 열을 이용하여 정렬한 값이 나온다.  
 
+```
+def trans(arr):
+    x = len(arr)
+    y = len(arr[0])
+    result = [[0 for _ in range(x)] for _ in range(y)]
+
+    for i in range(len(arr)):
+        for j in range(len(arr[i])):
+            result[j][i] = arr[i][j]
+    return result
+
+def mySort(arr, byrow):
+    if not byrow:
+        arr = trans(arr)
+    result = []
+    maxlen = 0
+    for row in arr:
+        maxn = max(row)
+        tmp = [0 for i in range(maxn+1)]
+        for num in row:
+            if num == 0:
+                continue
+            tmp[num] += 1
+
+        ll = []
+        for i in range(len(tmp)):
+            if tmp[i] == 0:
+                continue
+            ll.append((tmp[i],i))
+        ll.sort()
+        l = []
+        for i in range(len(ll)):
+            l.extend([ll[i][1], ll[i][0]])
+        if len(l) > 100:
+            l = l[:100]
+        if len(l) > maxlen:
+            maxlen = len(l)
+        result.append(l)
+    for row in result:
+        if len(row) >= maxlen:
+            continue
+        for i in range(maxlen-len(row)):
+            row.append(0)
+
+    if not byrow:
+        result = trans(result)
+    return result
+
+r,c,k = map(int,input().split())
+r -= 1
+c -= 1
+graph = []
+for i in range(3):
+    graph.append(list(map(int,input().split())))
+
+time = 0
+while True:
+    if time > 100:
+        print(-1)
+        exit(0)
+    # for row in graph:
+    #     print(*row)
+    # print('---')
+    if len(graph) > r and len(graph[r]) > c:
+        if graph[r][c] == k:
+            break
+
+    if len(graph) >= len(graph[0]):
+        graph = mySort(graph,1)
+    else:
+        graph = mySort(graph,0)
+    time += 1
+print(time)
+```
+
+> 92ms 맞았습니다!
 
 
 
