--- a/_posts/2020-02-07-낚시왕.md
+++ b/_posts/2020-02-07-낚시왕.md
@@ -65,3 +65,148 @@
 ### 나의 코드
 
 > 각 상어의 좌표값들을 저장해두고 1초마다 상어의 위치를 바꾼다. 위치가 겹치는 상어 중에 크기가 가장 큰 상어만 남겨둔다. 
+
+```Python
+R,C,M = map(int,input().split())
+if M == 0:
+    print(0)
+    exit(0)
+sharks = []
+
+# r,c = 상어의 위치, s = 속력, d = 이동방향(1= 위, 2 = 아래, 3 = 오른쪽, 4 = 왼쪽, z = 크기
+graph = [[[] for _ in range(C)] for _ in range(R)]
+
+for _ in range(M):
+    r,c,s,d,z = map(int,input().split())
+    if d == 3 or d == 4:
+        s = s%((C-1)*2)
+    else:
+        s = s%((R-1)*2)
+    graph[r-1][c-1] = [z,d,s]
+
+def move(r,c,z,d,s):
+    movement = 0
+    if d == 1:
+        plus = False
+        while movement < s:
+            if plus:
+                r += 1
+                if r > R-1:
+                    plus = False
+                    r -= 1
+                    continue
+                movement += 1
+            else:
+                r -= 1
+                if r < 0:
+                    plus = True
+                    r += 1
+                    continue
+                movement += 1
+        if plus:
+            d = 2
+        else:
+            d = 1
+    elif d == 2:
+        plus = True
+        while movement < s:
+            if plus:
+                r += 1
+                if r > R-1:
+                    plus = False
+                    r -= 1
+                    continue
+                movement += 1
+
+            else:
+                r -= 1
+                if r < 0:
+                    plus = True
+                    r +=1
+                    continue
+                movement += 1
+        if plus:
+            d = 2
+        else:
+            d = 1
+    elif d == 3:
+        plus = True
+        while movement < s:
+            if plus:
+                c += 1
+                if c > C-1:
+                    plus = False
+                    c -= 1
+                    continue
+                movement += 1
+
+            else:
+                c -= 1
+                if c < 0:
+                    plus = True
+                    c += 1
+                    continue
+                movement += 1
+
+        if plus:
+            d = 3
+        else:
+            d = 4
+    else:
+        plus = False
+        while movement < s:
+            if plus:
+                c += 1
+                if c > C-1:
+                    plus = False
+                    c -= 1
+                    continue
+                movement += 1
+
+            else:
+                c -= 1
+                if c < 0:
+                    plus = True
+                    c += 1
+                    continue
+                movement += 1
+
+        if plus:
+            d = 3
+        else:
+            d = 4
+    if len(new_graph[r][c]) == 0:
+        new_graph[r][c] = [z, d, s]
+    elif new_graph[r][c][0] < z:
+        new_graph[r][c] = [z, d, s]
+
+loc = -1
+ans = 0
+for time in range(C):
+    loc += 1
+    for r in range(R):
+        if len(graph[r][loc]) == 0:
+            continue
+        ans += graph[r][loc][0]
+        graph[r][loc] = []
+        break
+
+    new_graph = [[[] for _ in range(C)] for _ in range(R)]
+    for i in range(R):
+        for j in range(C):
+            if len(graph[i][j]) == 0:
+                continue
+            move(i,j,graph[i][j][0],graph[i][j][1],graph[i][j][2])
+    graph = new_graph
+
+# for i in range(R):
+#     for j in range(C):
+#         print(graph[i][j], end = ' ')
+#     print()
+
+print(ans)
+```
+
+> 시간 초과 
+>
+> 상어를 이동시킬때 한번에 벽에 닿을 수 있을 때까지 이동시켜야겠다.
