Add 연구소 3 나의 코드

--- a/_posts/2020-02-11-연구소3.md
+++ b/_posts/2020-02-11-연구소3.md
@@ -60,6 +60,8 @@ M = 3이고, 바이러스를 아래와 같이 활성 상태로 변경한 경우 
 
 그 시간들 중에서 최소 시간을 구한다.
 
+활성화되지 않은 바이러스를 탐색할 때에는 탐색하던 그래프가 아닌 다른 새로운 그래프에 걸린 시간을 저장하고 꺼내쓴다. 마지막에 탐색하는 데에 걸린 최대 시간을 구할 때에는 2로 들어갔다가 빈 칸으로 가지 못할 때의 시간은 반영하지 않는다.
+
 ``` python
 from collections import deque
 
@@ -88,7 +90,7 @@ def bfs(candidates):
     que = deque()
     visit = [[0 for _ in range(N)] for _ in range(N)]
     new_graph = [[0 for _ in range(N)] for _ in range(N)]
-
+    two_graph = [[0 for _ in range(N)] for _ in range(N)]
     for can in candidates:
         que.append(can)
         visit[can[0]][can[1]] = 1
@@ -107,17 +109,27 @@ def bfs(candidates):
             if graph[nextx][nexty]== 1:
                 continue
             if graph[nextx][nexty] == 2:
-                new_graph[nextx][nexty] = new_graph[x][y]
+                if graph[x][y] == 2:
+                    two_graph[nextx][nexty] = two_graph[x][y] + 1
+                    visit[nextx][nexty] = 1
+                    que.append((nextx,nexty))
+                else:
+                    two_graph[nextx][nexty] = new_graph[x][y] + 1
+                    visit[nextx][nexty] = 1
+                    que.append((nextx, nexty))
+                continue
+            if graph[x][y] == 2:
+                new_graph[nextx][nexty] = two_graph[x][y] + 1
                 if new_graph[nextx][nexty] > maxn:
                     maxn = new_graph[nextx][nexty]
                 visit[nextx][nexty] = 1
                 que.append((nextx, nexty))
-                continue
-            new_graph[nextx][nexty] = new_graph[x][y] + 1
-            if new_graph[nextx][nexty] > maxn:
-                maxn = new_graph[nextx][nexty]
-            visit[nextx][nexty] = 1
-            que.append((nextx,nexty))
+            else:
+                new_graph[nextx][nexty] = new_graph[x][y] + 1
+                if new_graph[nextx][nexty] > maxn:
+                    maxn = new_graph[nextx][nexty]
+                visit[nextx][nexty] = 1
+                que.append((nextx,nexty))
     bool = infection(new_graph)
     if bool:
         return maxn
@@ -125,31 +137,32 @@ def bfs(candidates):
         return 987654321
 
 minn = 987654321
-def track(depth,path):
+def track(depth,path,idx):
     global minn
     if depth == M:
+        # print(path)
         time = bfs(path)
         if time < minn:
             # print(path, time)
             minn = time
         return
-    for i in range(len(viruses)):
+    for i in range(idx,len(viruses)):
         if used[i]:
             continue
         used[i] = 1
         path.append(viruses[i])
-        track(depth+1,path)
+        track(depth+1,path,i)
         used[i] = 0
         path.pop()
 
-track(0,[])
+track(0,[],0)
 if minn == 987654321:
     print(-1)
 else:
     print(minn)
 ```
 
-
+1048ms 맞았습니다.
 
 
 
