Add 테트로미노 중간 코드

--- a/_posts/2020-02-06-테트로미노.md
+++ b/_posts/2020-02-06-테트로미노.md
@@ -89,6 +89,53 @@
 
 ---
 
+### 나의 코드
+
+> 한 점에서 가져올 수 있는 도형의 경우를 각 점마다 구한다. 각 도형의 경우에서 얻을 수 있는 점수 중에 최댓값을 구한다.
+
+```Python
+x,y = map(int,input().split())
+
+graph = []
+for _ in range(x):
+    graph.append(list(map(int,input().split())))
+
+def setIndex(x,y):
+    indexs = [[(x,y),(x+1,y),(x+2,y),(x+3,y)], [(x,y),(x,y+1),(x,y+2),(x,y+3)]]
+    indexs.append([(x,y),(x+1,y+1),(x+1,y),(x,y+1)])
+    indexs.extend([[(x,y),(x+1,y),(x+2,y),(x+2,y+1)],[(x,y),(x-1,y),(x-1,y+1),(x-1,y+2)],
+                   [(x,y),(x,y+1),(x+1,y+1),(x+2,y+1)],[(x,y),(x+1,y),(x+1,y-1),(x+1,y-2)]])
+    indexs.extend([[(x,y),(x+1,y),(x+1,y+1),(x+2,y+1)],[(x,y),(x,y+1),(x-1,y+1),(x-1,y+2)]])
+    indexs.extend([[(x,y),(x,y+1),(x,y+2),(x+1,y+1)],[(x,y),(x+1,y),(x+2,y),(x+1,y-1)],
+                  [(x,y),(x,y+1),(x,y+2),(x-1,y+1)],[(x,y),(x+1,y),(x+2,y),(x+1,y+1)]])
+
+    return indexs
+
+maxNum = 0
+
+for i in range(len(graph)):
+    for j in range(len(graph[i])):
+        can = setIndex(i,j)
+        for k in range(len(can)):
+            ans = [[0 for _ in range(y)] for _ in range(x)]
+            sums = 0
+            flag = 0
+            for l in range(len(can[k])):
+                xx = can[k][l][0]
+                yy = can[k][l][1]
+                if xx >= x or xx < 0 or yy >= y or yy < 0:
+                    flag = 1
+                    break
+                sums += graph[xx][yy]
+            if flag:
+                continue
+            if sums > maxNum:
+                maxNum = sums
+print(maxNum)
+```
+
+> 시간초과
+
 
 
 
