--- a/_posts/2020-02-16-퇴사.md
+++ b/_posts/2020-02-16-퇴사.md
@@ -125,3 +125,61 @@ N = 7인 경우에 다음과 같은 상담 일정표를 보자.
 ```
 90
 ```
+
+## 나의 코드
+
+백트래킹을 사용한다.
+
+어느 날을 상담하기로 결정했다면 상담이 끝나고 난 이후에 할 수 있는 모든 상담을 검토한다.
+
+첫 번 째로 퇴사 이전에 상담을 마무리할 수 있는지를 검토한다.
+
+상담의 경우의 수를 검토하면서 각 상담 일자에 그 상담을 진행했을 때 얻을 수 있는 최대 이익을 기록해 놓는다. 
+
+기록된 이익 중에 가장 큰 이익을 출력한다.
+
+```Python
+N = int(input())
+
+days = [0 for _ in range(N+1)]
+costs = [0 for _ in range(N+1)]
+
+for i in range(N):
+    day ,cost = map(int,input().split())
+
+    days[i+1] = day
+    costs[i+1] = cost
+# print(days)
+# print(costs)
+score = [0 for _ in range(N+1)]
+visit = [0 for _ in range(N+1)]
+def track(start):
+    global score
+    # print(start)
+    for i in range(1,N+1):
+        if start + days[start] > i:
+            continue
+        if visit[i]:
+            continue
+        if score[i] > score[start]+costs[i]:
+            continue
+        if i + days[i]-1 > N:
+            continue
+        visit[i] = 1
+        score[i] = score[start]+costs[i]
+        track(i)
+        visit[i] = 0
+
+for i in range(1,N+1):
+    if score[i]:
+        continue
+    if i+days[i]-1 > N:
+        continue
+    score[i] = costs[i]
+    track(i)
+
+# print(score)
+print(max(score))
+```
+
+132ms 맞았습니다.
