--- a/_posts/2020-02-17-새로운게임2.md
+++ b/_posts/2020-02-17-새로운게임2.md
@@ -164,3 +164,100 @@
 ```
 7
 ```
+
+## 나의 코드
+
+1. 판의 색을 기록한 이중리스트 한개, 
+2.  판에 올라가 있는 말의 정보를 기록한 이중리스트 한개, 
+3. 1~K번 말의 위치를 기록한 일차원리스트 한개를 만든다.
+
+이동할 시에 다음 칸의 색을 파악해서 2번 리스트와 3번 리스트를 동시에 수정해 준다. 말 한개를 움직일 때마다 도달하는 다음 칸에서 말의 갯수가 4개 이상이 되면 즉시 게임을 중단한다.
+
+```Python
+import sys
+
+N, K = map(int,input().split())
+
+dx = [0,0,-1,1]
+dy = [1,-1,0,0]
+
+colors = []
+count = [[[] for _ in range(N)] for _ in range(N)]
+horseInfo = []
+
+for _ in range(N):
+    colors.append(list(map(int,input().split())))
+
+# dir 1 : right, 2 : left, 3 : up, 4 : down
+for i in range(K):
+    x,y,dir = map(int,input().split())
+    x -= 1
+    y -= 1
+    count[x][y].append(i)
+    horseInfo.append([x,y,dir])
+def move(idx):
+    # print(idx)
+    x = horseInfo[idx][0]
+    y = horseInfo[idx][1]
+
+    next_x = x + dx[horseInfo[idx][2]-1]
+    next_y = y + dy[horseInfo[idx][2]-1]
+
+    if next_x >= N or next_x < 0 or next_y >= N or next_y < 0 or colors[next_x][next_y] == 2:
+        if horseInfo[idx][2] == 1:
+            horseInfo[idx][2] = 2
+            next_x = x + dx[horseInfo[idx][2] - 1]
+            next_y = y + dy[horseInfo[idx][2] - 1]
+        elif horseInfo[idx][2] == 2:
+            horseInfo[idx][2] = 1
+            next_x = x + dx[horseInfo[idx][2] - 1]
+            next_y = y + dy[horseInfo[idx][2] - 1]
+        elif horseInfo[idx][2] == 3:
+            horseInfo[idx][2] = 4
+            next_x = x + dx[horseInfo[idx][2] - 1]
+            next_y = y + dy[horseInfo[idx][2] - 1]
+        elif horseInfo[idx][2] == 4:
+            horseInfo[idx][2] = 3
+            next_x = x + dx[horseInfo[idx][2] - 1]
+            next_y = y + dy[horseInfo[idx][2] - 1]
+    if next_x >= N or next_x < 0 or next_y >= N or next_y < 0:
+        return
+    if colors[next_x][next_y] == 2:
+        return
+    elif colors[next_x][next_y] == 1:
+        while count[x][y][-1] != idx:
+            index = count[x][y].pop()
+            horseInfo[index][0] = next_x
+            horseInfo[index][1] = next_y
+            count[next_x][next_y].append(index)
+        horseInfo[idx][0] = next_x
+        horseInfo[idx][1] = next_y
+        count[next_x][next_y].append(count[x][y].pop())
+        return len(count[next_x][next_y])
+    else:
+        tmp = []
+        while count[x][y][-1] != idx:
+            index = count[x][y].pop()
+            horseInfo[index][0] = next_x
+            horseInfo[index][1] = next_y
+            tmp.append(index)
+        horseInfo[idx][0] = next_x
+        horseInfo[idx][1] = next_y
+        count[next_x][next_y].append(count[x][y].pop())
+        for i in range(len(tmp)-1,-1,-1):
+            count[next_x][next_y].append(tmp[i])
+        return len(count[next_x][next_y])
+
+for turn in range(1,1001):
+    for i in range(K):
+        length = move(i)
+        if length == None:
+            continue
+        if length >= 4:
+            print(turn)
+            sys.exit(0)
+print(-1)
+```
+
+236ms 맞았습니다.
+
