Add 연구소 나의 코드

--- a/_posts/2020-02-18-연구소.md
+++ b/_posts/2020-02-18-연구소.md
@@ -120,3 +120,104 @@
 ```
 3
 ```
+
+## 나의 코드
+
+연구소의 크기가 최대 8x8이다. 
+
+벽을 세울 경우의 수 최대 64C3으로 41664가지이다. 
+
+각 바이러스가 퍼지는 과정이 64번의 반복문으로 해결된다.
+
+벽을 세울 수 있는 경우의 수를 완전탐색하여 각각의 안전영역을 구해서 그 최소값을 구한다.
+
+```Python
+N,M = map(int,input().split())
+max_safezone = 0
+dx = [1,-1,0,0]
+dy = [0,0,1,-1]
+graph = []
+empty = []
+virus = []
+
+for i in range(N):
+    l = list(map(int,input().split()))
+    for j in range(len(l)):
+        if l[j] == 2:
+            virus.append((i,j))
+        elif l[j] == 0:
+            empty.append((i,j))
+    graph.append(l)
+
+def mydeepcopy(graph):
+    newgraph = [[0 for _ in range(len(graph[i]))] for i in range(len(graph))]
+    for i in range(len(graph)):
+        for j in range(len(graph[i])):
+            newgraph[i][j] = graph[i][j]
+    return newgraph
+
+check = [0 for _ in range(len(empty))]
+
+def track(depth, indexes):
+    global max_safezone
+    if depth == 3:
+        new_graph = mydeepcopy(graph)
+        safe = dfs(indexes,new_graph)
+        if safe > max_safezone:
+            max_safezone = safe
+        return
+
+    for i in range(indexes[-1]+1,len(empty)):
+        if check[i]:
+            continue
+        check[i] = 1
+        indexes.append(i)
+        track(depth+1,indexes)
+        check[i] = 0
+        indexes.pop()
+
+def dfs(wall_idx, dfs_graph):
+    for i in range(1,len(wall_idx)):
+        wall_x, wall_y = empty[wall_idx[i]]
+        dfs_graph[wall_x][wall_y] = 1
+
+    visit = [[0 for _ in range(M)] for _ in range(N)]
+    stack = []
+    for i in range(len(virus)):
+        xx,yy = virus[i]
+        stack.append((xx,yy))
+        visit[xx][yy] = 1
+
+    while stack:
+        x,y = stack.pop()
+
+        for i in range(4):
+            next_x = x + dx[i]
+            next_y = y + dy[i]
+
+            if next_x >= N or next_x < 0 or next_y >= M or next_y < 0:
+                continue
+            if visit[next_x][next_y]:
+                continue
+            if dfs_graph[next_x][next_y] == 1 or dfs_graph[next_x][next_y] == 2:
+                continue
+            stack.append((next_x,next_y))
+            visit[next_x][next_y] = 1
+            dfs_graph[next_x][next_y] = 2
+
+    return safezone(dfs_graph)
+
+def safezone(safe_graph):
+    cnt = 0
+    for i in range(len(safe_graph)):
+        for j in range(len(safe_graph[i])):
+            if safe_graph[i][j] == 0:
+                cnt += 1
+    return cnt
+
+track(0,[-1])
+print(max_safezone)
+```
+
+612ms 맞았습니다.
+
