Add 로봇청소기 나의 코드

--- a/_posts/2020-02-18-로봇청소기.md
+++ b/_posts/2020-02-18-로봇청소기.md
@@ -74,3 +74,65 @@
 ```
 57
 ```
+
+## 나의 코드
+
+```Python
+N,M = map(int,input().split())
+robot = list(map(int,input().split()))
+movex = [-1,0,1,0]
+movey = [0,1,0,-1]
+
+dx = [0,-1,0,1]
+dy = [-1,0,1,0]
+
+graph = []
+
+for _ in range(N):
+    graph.append(list(map(int,input().split())))
+
+cleaned = [[0 for _ in range(M)] for _ in range(N)]
+cleaned_zone = 0
+
+def clean(robot):
+    global cleaned_zone
+    x,y = robot[0],robot[1]
+    if cleaned[x][y] == 0:
+        cleaned[x][y] = 1
+        cleaned_zone += 1
+    cnt = 0
+    # for row in cleaned:
+    #     print(*row)
+    # print()
+    while cnt < 4:
+        if check(robot[0],robot[1],robot[2]):
+            robot[0] += dx[robot[2]]
+            robot[1] += dy[robot[2]]
+            robot[2] = (robot[2] + 3) % 4
+            return clean(robot)
+        else:
+            robot[2] = (robot[2]+3)%4
+            cnt += 1
+    back_x = robot[0] - dx[(robot[2]+1)%4]
+    back_y = robot[1] - dy[(robot[2]+1)%4]
+
+    if graph[back_x][back_y] == 1:
+        return
+    else:
+        robot[0] = back_x
+        robot[1] = back_y
+        clean(robot)
+
+def check(x,y,dir):
+    next_x = x + dx[dir]
+    next_y = y + dy[dir]
+    if 0<=next_x<N and 0<=next_y<M:
+        if graph[next_x][next_y] == 0 and cleaned[next_x][next_y] == 0:
+            return True
+    return False
+
+clean(robot)
+print(cleaned_zone)
+```
+
+140ms 맞았습니다.
