--- a/_posts/2020-02-24-치킨배달.md
+++ b/_posts/2020-02-24-치킨배달.md
@@ -111,3 +111,63 @@
 ```
 32
 ```
+
+## 나의 코드
+
+치킨 집을 M개 뽑는 모든 경우의 수를 뽑는다. M의 최대가 13이기 때문에 최대 경우의 수는 13C6 또는 13C7일 때인데, 그 경우의 수는 1716가지 이다. 
+
+각 가정집에서 제일 가까운 치킨집과의 거리를 구하고 모든 집에서 계산된 거리의 합을 구한다.
+
+거리의 합 중에 가장 최소의 값을 출력한다.
+
+```
+N, M = map(int,input().split())
+
+graph = []
+homes = []
+total_chickens = []
+dists = []
+chickens = []
+
+for i in range(N):
+    tmp = list(map(int,input().split()))
+    for j in range(len(tmp)):
+        if tmp[j] == 1:
+            homes.append((i,j))
+        elif tmp[j] == 2:
+            total_chickens.append((i,j))
+    graph.append(tmp)
+
+def track(depth,path,idx):
+    if depth == M:
+        tmp = []
+        for item in path:
+            tmp.append(item)
+        chickens.append(tmp)
+        return
+
+    for i in range(idx+1,len(total_chickens)):
+        path.append(total_chickens[i])
+        track(depth+1, path, i)
+        path.pop()
+
+track(0,[],-1)
+
+min_dist = 987654321
+for chicken in chickens:
+    dists = [987654321]*len(homes)
+    for ch_loc in chicken:
+        for i in range(len(homes)):
+            dist = abs(ch_loc[0] - homes[i][0]) + abs(ch_loc[1] - homes[i][1])
+            if dists[i] > dist:
+                dists[i] = dist
+    s = sum(dists)
+    if min_dist > s:
+        min_dist = s
+
+print(min_dist)
+```
+
+
+
+ 
