Add 인구 이동 나의 코드

--- a/_posts/2020-02-25-인구이동.md
+++ b/_posts/2020-02-25-인구이동.md
@@ -130,3 +130,71 @@ L = 20, R = 50이기 때문에, 아래와 같이 국경선이 열린다.
 ```
 3
 ```
+
+## 나의 코드
+
+최대 배열의 크기가 50X50 이기 때문에, 재귀로 dfs를 돌리면 파이썬에서는 재귀제한으로 인해 불가능할 것이다. bfs를 통해 이전 칸과의 차이가 L이상 R이하이면 que에 담는다.
+
+한 턴마다 visit배열을 공유하면서 진행한다. 그 턴에서 이전에 방문한 점이면 bfs 함수를 호출하지 않는다. 
+
+인구 이동이 일어나지 않는 경우는 모든 점에서 bfs함수를 호출한 경우이기 때문에 그 때 while문을 종료하고 turn을 출력한다.
+
+```
+from collections import deque
+
+dx = [1,-1,0,0]
+dy = [0,0,1,-1]
+
+N, L, R = map(int,input().split())
+
+graph = []
+
+for _ in range(N):
+    graph.append(list(map(int,input().split())))
+
+def bfs(sx,sy):
+    que = deque()
+    que.append((sx,sy))
+    visit[sx][sy] = 1
+    population = graph[sx][sy]
+    locations = [(sx,sy)]
+
+    while que:
+        x, y = que.popleft()
+
+        for i in range(4):
+            nx = x + dx[i]
+            ny = y + dy[i]
+
+            if nx >= N or nx < 0 or ny >= N or ny < 0:
+                continue
+            if visit[nx][ny]:
+                continue
+            if abs(graph[x][y] - graph[nx][ny]) > R or abs(graph[x][y] - graph[nx][ny]) < L:
+                continue
+            visit[nx][ny] = 1
+            que.append((nx,ny))
+            population += graph[nx][ny]
+            locations.append((nx,ny))
+
+    new_population = population//len(locations)
+    for loc in locations:
+        graph[loc[0]][loc[1]] = new_population
+
+turn = 0
+while True:
+    visit = [[0]*N for _ in range(N)]
+    cnt = 0
+    for i in range(len(graph)):
+        for j in range(len(graph[i])):
+            if not visit[i][j]:
+                bfs(i,j)
+                cnt += 1
+
+    if cnt == N**2:
+        break
+    turn += 1
+
+print(turn)
+```
+
