--- a/_posts/2020-02-29-파이프옮기기1.md
+++ b/_posts/2020-02-29-파이프옮기기1.md
@@ -111,3 +111,55 @@
 ```
 13
 ```
+
+## 나의 코드
+
+이전에 가로방향으로 옮겼다면, (가로, 대각선) 방향으로 이동할 수 있고, 이전에 세로방향으로 옮겼다면, (세로, 대각선) 방향으로 이동할 수 있으며, 이전에 대각선 방향으로 이동하였다면 (가로, 세로, 대각선) 방향으로 이동할 수 있다. 
+
+가로 방향으로 이동하고 싶을때는 오른쪽 칸이 벽이 아니어야 하고, 세로 방향으로 이동하려면 아래쪽 칸이 벽이 아니어야 한다. 또한 대각선 방향으로 이동하고 싶다면 오른쪽 칸, 아래 쪽 칸 , 대각선 아래쪽 칸 세 군데가 벽이 아니어야 한다. 
+
+```
+N = int(input())
+
+graph = []
+
+for _ in range(N):
+    graph.append(list(map(int,input().split())))
+
+# 출발지는 항상 (1,2)
+# 0 : 가로 1: 세로 2: 대각선
+cnt = 0
+def track(pre_dir, pre_end):
+    global cnt
+    x = pre_end[0]
+    y = pre_end[1]
+    
+    if x == N-1 and y == N-1:
+        cnt += 1
+        return
+
+    if pre_dir == 0:
+        if y+1 < N and graph[x][y+1] == 0:
+            track(0,(x,y+1))
+        if x+1 < N and y+1 < N:
+            if graph[x+1][y] == 0 and graph[x][y+1] == 0 and graph[x+1][y+1] == 0:
+                track(2,(x+1,y+1))
+    elif pre_dir == 1:
+        if x+1 < N and graph[x+1][y] == 0:
+            track(1, (x+1, y))
+        if y + 1 < N and x + 1 < N:
+            if graph[x + 1][y] == 0 and graph[x][y + 1] == 0 and graph[x + 1][y + 1] == 0:
+                track(2, (x + 1, y + 1))
+    else:
+        if x+1<N and graph[x+1][y]==0:
+            track(1,(x+1,y))
+        if y+1<N and graph[x][y+1]==0:
+            track(0,(x,y+1))
+        if y + 1 < N and x + 1 < N:
+            if graph[x + 1][y] == 0 and graph[x][y + 1] == 0 and graph[x + 1][y + 1] == 0:
+                track(2, (x + 1, y + 1))
+
+track(0,(0,1))
+print(cnt)
+```
+
