Add 색종이 붙이기

--- a/_posts/2020-03-01-색종이 붙이기.md
+++ b/_posts/2020-03-01-색종이 붙이기.md
@@ -191,3 +191,84 @@
 ```
 5
 ```
+
+## 나의 코드
+
+백트래킹 말고는 풀 수 있는 방법이 마땅히 떠오르지가 않는다.
+
+각 점마다 다섯 개의 크기의 색종이를 놓을 수 있는 자린지 아닌지를 파악하는 함수를 하나 만든다. 재귀의 깊이를 점점 늘려가면서 1이 쓰여져 있는 점으로 넘어가서 모두 채웠을 때 쓰인 색종이의 수를 비교한다.
+
+```
+import sys
+
+graph = []
+
+loc = []
+for i in range(10):
+    tmp = list(map(int,input().split()))
+    for j in range(len(tmp)):
+        if tmp[j] == 1:
+            loc.append((i,j))
+    graph.append(tmp)
+
+if len(loc) == 0:
+    print(0)
+    sys.exit(0)
+visit = [[0 for _ in range(10)] for _ in range(10)]
+paper = [5]*5
+min_use = 987654321
+def canMake(x,y,wide):
+    if x+wide-1 >= 10 or y+wide-1 >=10:
+        return False
+    for i in range(wide):
+        for j in range(wide):
+            if graph[x+i][y+j] == 0:
+                return False
+            if visit[x+i][y+j]:
+                return False
+    return True
+
+def track(use,idx):
+    global min_use
+
+    if use >= min_use:
+        return
+    if idx == len(loc):
+        if use < min_use:
+            min_use = use
+        return
+
+    x = loc[idx][0]
+    y = loc[idx][1]
+    if visit[x][y]:
+        track(use,idx+1)
+    else:
+        for w in range(5,1,-1):
+            if paper[w-1] <= 0:
+                continue
+            if canMake(x,y,w):
+                for i in range(w):
+                    for j in range(w):
+                        visit[x+i][y+j] = 1
+                paper[w-1] -= 1
+                track(use+1,idx+1)
+                for i in range(w):
+                    for j in range(w):
+                        visit[x+i][y+j] = 0
+                paper[w-1] += 1
+
+        if paper[0] > 0:
+            visit[x][y] = 1
+            paper[0] -= 1
+            track(use+1,idx+1)
+            visit[x][y] = 0
+            paper[0] += 1
+
+track(0,0)
+
+if min_use == 987654321:
+    print(-1)
+else:
+    print(min_use)
+```
+
