Add 야구 나의 코드 By Java

--- a/_posts/2020-03-02-야구.md
+++ b/_posts/2020-03-02-야구.md
@@ -135,3 +135,122 @@
 ```
 89
 ```
+
+## 나의 코드
+
+이 코드는 Python으로는 기준이 너무 빡빡해서 Java로 풀었다.
+
+```
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+import java.io.IOException;
+import java.util.StringTokenizer;
+
+public class n17281_Baseball {
+	static StringTokenizer st;
+	static int[] order = new int[9];
+	static int maxScore = 0;
+	static boolean numUsed[] = new boolean[9];
+	static int N = 0;
+	static int[][] innings;
+	static int[] bases = new int[4];
+	
+	public static int stoi(String s) {
+		return Integer.parseInt(s);
+	}
+	
+	public static void main(String[] args) throws IOException{
+		// TODO Auto-generated method stub
+		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+		N = Integer.parseInt(br.readLine());
+		innings = new int[N][9];
+		for(int i = 0; i < N; i++) {
+			st = new StringTokenizer(br.readLine()," ");
+			for(int j = 0; j<9;j++) {
+				innings[i][j] = stoi(st.nextToken());
+			}
+		}
+		track(0);
+		System.out.println(maxScore);
+	}
+	
+	public static void track(int depth) {
+		if(depth == 3) {
+			track(depth+1);
+		}
+		if(depth == 9) {
+			int score = play(0,0,0);
+			if (score > maxScore) {
+				maxScore = score;
+			}
+			return;
+		}
+		
+		for(int i = 1; i < 9; i++) {
+			if (numUsed[i]) {
+				continue;
+			}
+			numUsed[i] = true;
+			order[depth] = i;
+			track(depth+1);
+			numUsed[i] = false;
+			order[depth] = 0;
+			
+		}
+	}
+	
+	public static int run(int width, int score) {
+		if(width == 4) {
+			for(int i = 1; i< 4; i++) {
+				if(bases[i] == 1) {
+					score++;
+					bases[i] = 0;
+				}
+			}
+			score++;
+			return score;
+		}
+		
+		for(int i = 3;i > 0; i--) {
+			if(bases[i] == 0) {
+				continue;
+			}
+			if(i+width >= 4) {
+				bases[i] = 0;
+				score++;
+			}else {
+				bases[i+width] = 1;
+				bases[i] = 0;
+			}
+		}
+		bases[width] = 1;
+		return score;
+	}
+	
+	public static int play(int inning,int hitter_idx, int score) {
+		if(inning == N) {
+			return score;
+		}
+		int out = 0;
+		while(out < 3) {
+			int hit = innings[inning][order[hitter_idx]];
+			if(hit == 0) {
+				out++;
+			}else if(hit == 1) {
+				score = run(1,score);
+			}else if(hit == 2) {
+				score = run(2,score);
+			}else if(hit == 3) {
+				score = run(3,score);
+			}else {
+				score = run(4,score);
+			}
+			hitter_idx = (hitter_idx+1)%9;
+		}
+		bases = new int[4];
+		return play(inning+1,hitter_idx,score);
+	}
+}
+
+```
+
