Add 게리맨더링 나의 코드

--- a/_posts/2020-03-10-게리맨더링.md
+++ b/_posts/2020-03-10-게리맨더링.md
@@ -120,3 +120,92 @@
 ```
 9
 ```
+
+## 나의 코드
+
+선거구를 나눌 수 있는 모든 경우의 수에서 선거구가 올바르게 나누어져 있는 경우의 수만 구한다.
+
+선거구가 나뉘어져 있을 때 visit배열을 공유하면서 각 점에서 bfs탐색을 실시한다. 이미 방문된 점에서는 탐색을 실시하지 않는다. 그러면 bfs탐색을 시작하는 점은 2개가 되어야 올바르게 선거구가 나누어졌다고 할 수 있다. 
+
+올바르게 나누어진 선거구의 인구의 차이 중 최솟값을 구한다.
+
+```
+from collections import deque
+
+N = int(input())
+min_pop = 987654321
+def track(depth, sector):
+    global min_pop
+    if depth == N:
+        visit = [0]*(N+1)
+        cnt = 0
+        for i in range(1,N+1):
+            if visit[i]:
+                continue
+            cnt += 1
+            visit = bfs(i,visit,sector)
+
+        if cnt != 2:
+            return
+
+        if isPossible(visit):
+            one = 0
+            two = 0
+            for i in range(1,N+1):
+                if sector[i] == 0:
+                    one += population[i]
+                else:
+                    two += population[i]
+
+            ans = abs(one-two)
+            if ans < min_pop:
+                min_pop = ans
+        return
+    sector.append(0)
+    track(depth+1,sector)
+    sector.pop()
+    sector.append(1)
+    track(depth+1,sector)
+    sector.pop()
+
+def bfs(node,visit,sector):
+    que = deque()
+    que.append(node)
+    visit[node] = 1
+
+    while que:
+        now_node = que.popleft()
+
+        for i in range(len(nodes[now_node])):
+            if visit[nodes[now_node][i]]:
+                continue
+            if sector[nodes[now_node][i]] != sector[now_node]:
+                continue
+            que.append(nodes[now_node][i])
+            visit[nodes[now_node][i]] = 1
+    return visit
+
+def isPossible(visit):
+    for i in range(1,len(visit)):
+        if not visit[i]:
+            return False
+    return True
+
+population = list(map(int,input().split()))
+population.insert(0,0)
+
+nodes = [[] for _ in range(N+1)]
+
+for i in range(1,N+1):
+    info = list(map(int,input().split()))
+    for j in range(1,len(info)):
+        nodes[i].append(info[j])
+
+track(0,[0])
+
+if min_pop == 987654321:
+    print(-1)
+else:
+    print(min_pop)
+```
+
